--- a/i/11/DrawCli/log.html
+++ b/i/11/DrawCli/log.html
@@ -42,8 +42,12 @@
       </header>
       <section>
 
-      <h2 id="v0014-"><a href="https://github.com/littleflute/vc6/edit/master/i/11/DrawCli/readme.md">v0.0.14</a> <a href="..">..</a></h2>
-<h2 id="loghtml"><a href="/vc6/i/11/DrawCli/log.html">log.html</a></h2>
+      <h2 id="v0014-">
+        <a href="https://github.com/littleflute/vc6/edit/master/i/11/DrawCli/readme.md">v0.0.14</a> 
+        <a href="..">..</a></h2>
+      <h2 id="loghtml">
+        <a href="https://github.com/littleflute/vc6/edit/master/i/11/DrawCli/log.html">log.html*</a>
+      </h2>
 <h2 id="httpslittleflutegithubiovc6"><a href="https://littleflute.github.io/vc6/">https://littleflute.github.io/vc6/</a></h2>
 
 <div id="id_div_4_plx">
@@ -56,9 +60,9 @@
 
 <script src="https://littleflute.github.io/JavaScript/blApp.js"></script>
 
-<p>¨Cxd1¨C
+<p>Â¨Cxd1Â¨C
 3) * 	XDS_line, XDDS_line
-2) + 	pDC-&gt;TextOut(410,280,¡±xdtest: v0.0.1¡±);</p>
+2) + 	pDC-&gt;TextOut(410,280,Â¡Â±xdtest: v0.0.1Â¡Â±);</p>
 
 <p>1) test git. 
 https://github.com/littleflute/vc6.git</p>
